# turtlebot4-slam-nav

./: .gitignore  README.md  bash_command.md
config/: .bashrc
docs/: OpenGP.desktop  bash.md
docs/shortcut/: OpenGP.desktop  OpenSrc.desktop  turtlebot4.desktop
docs/우분투 설치/: 듀얼부팅.txt
install/: local_setup.sh  setup.sh
install/rokey_pjt/lib/rokey_pjt/: depth_checker  depth_checker_mouse_click  tf_point_transform
install/rokey_pjt/share/rokey_pjt/: package.dsv  package.ps1  package.sh  package.xml
install/turtlebot4_description/share/turtlebot4_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot4_desktop/share/turtlebot4_desktop/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot4_msgs/share/turtlebot4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot4_navigation/share/turtlebot4_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot4_node/include/turtlebot4_node/: action.hpp  buttons.hpp  display.hpp  leds.hpp  service.hpp  turtlebot4.hpp  utils.hpp
install/turtlebot4_node/lib/turtlebot4_node/: turtlebot4_node
install/turtlebot4_node/share/turtlebot4_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
log/: latest_build
rokey_ws/maps/: first_map1.pgm  first_map1.yaml
rokey_ws/maps/dpr/: first_map.yaml
rokey_ws/src/rokey_pjt/: CMakeLists.txt  package.xml  setup.py
rokey_ws/src/rokey_pjt/launch/: detect_ps_front.launch.py  detect_ps_map.launch.py  detect_ps_map_service.launch.py  move_object_front.launch.py  yolo_tf.launch.py
rokey_ws/src/rokey_pjt/rokey_pjt/: README.md  REAMDME.md  beep.py  carplate_ocr.py  carplate_ocr1.py  db_manager.py  detect_car_info.py  detect_car_info2.py  detect_car_info_test.py  detect_ps_front.py  detect_ps_front1.py  detect_ps_front_service.py  move_object_front.py  navi_test.py  object_position.py  ocr_test.ipynb  parking_gui.py  parking_manager_gui.py  ref1.py  ref2.py  rotation_test.py  sc_follow_waypoints.py  sc_follow_waypoints2.py  test_ocr.ipynb  tf_point_transform.py  tf_ref1.py  tf_ref2.py  yolo_detect.py  yolo_detect_test.py  yolo_tf.py
rokey_ws/src/rokey_pjt/rokey_pjt/deprecated/: carplate_ocr.py  detect_car_info.py  detect_ps_map.py  move_forward.py  navi_test.py  ocr_test.ipynb  test_ocr.ipynb  tmp.py  yolo_tf.py
rokey_ws/src/rokey_pjt/srv/: GetMapPose.srv
rokey_ws/src/turtlebot4_beep/: package.xml  setup.py
rokey_ws/src/yolov8_ros/: package.xml
turtlebot4_ws/maps/: first_map.pgm  first_map.yaml
turtlebot4_ws/src/rokey_pjt/: package.xml  setup.py
(+196 files in other folders)
