<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rokey_pjt</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="a93450311@gmail.com">fred</maintainer>
  <license>Apache-2.0</license>

  <!-- ✅ 테스트 의존성 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- ✅ 빌드 의존성 (인터페이스용) -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- ✅ 실행 의존성 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- ✅ 인터페이스 그룹 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- ✅ 빌드 타입 -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
